Closed Bug 1939499 Opened 1 year ago Closed 1 year ago

LoadSourceMarker is broken due to a field called "type"

Categories

(Core :: Audio/Video, defect, P1)

defect

Tracking

()

RESOLVED FIXED
135 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox133 --- wontfix
firefox134 --- wontfix
firefox135 --- fixed

People

(Reporter: mstange, Assigned: alwu)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I noticed that the LoadSourceMarker which was added in bug 1919123 is mostly non-functional.

Example profile: https://share.firefox.dev/3BERXER

The tooltip for the mozloadresource markers doesn't show the src, media and type fields.

That's because the profiler reserves data.type to identify which schema the marker uses. But this marker has its own type field, which it populates with the video source's mime type. This overwrites the marker type and confuses the profiler front-end.

https://searchfox.org/mozilla-central/rev/222add4dd36e034fa4d0a8b3e4e1ded979599892/dom/media/utils/MediaProfilerMarkers.h#182

{"type", MS::InputType::String, "Type", MS::Format::String},

I recommend renaming this field to mimeType or sourceType.

(On the profiler side, we should change the data representation so that there aren't any reserved field names. This is tracked in issue #4494.)

Set release status flags based on info from the regressing bug 1919123

:alwu, since you are the author of the regressor, bug 1919123, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Assignee: nobody → alwu
Severity: -- → N/A
Type: task → defect
Flags: needinfo?(alwu)
Priority: -- → P1
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/76167ad914ce rename the attribute for LoadSourceMarker. r=media-playback-reviewers,chunmin
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 135 Branch

The patch landed in nightly and beta is affected.
:alwu, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox134 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(alwu)
Flags: needinfo?(alwu)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: