Bug 1939499 - rename the attribute for LoadSourceMarker. r=media-playback-reviewers,chunmin

Differential Revision: https://phabricator.services.mozilla.com/D233004